Fix mobile Safari layout bugs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,7 @@ button {
     background: none;
     border: none;
     cursor: pointer;
+    text-align: center;
 }
 
 h1,
@@ -59,7 +60,7 @@ a:active {
 }
 
 #map-container {
-    position: absolute;
+    position: fixed;
     inset: 0;
     width: 100vw;
     height: 100vh;
@@ -69,9 +70,9 @@ a:active {
     display: flex;
     flex-direction: column;
     width: min-content;
-    max-width: 100vw;
-    max-height: 100vh;
-    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+    position: fixed;
     top: 0;
     left: 0;
     padding: 30px 30px 50px;
@@ -225,7 +226,7 @@ h1.title > a {
     width: 1.6em;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
-    padding-top: 3px;
+    padding: 3px 0 0;
     margin-right: -2px;
     transition: background-color 0.2s ease;
 }
